# vernier2osc

./: CMakeLists.txt  main.cpp
